# Personalized-PageRank

./: BasicDefinition.h  BatchRandomWalk.cpp  BatchRandomWalk.h  CMakeLists.txt  CleanGraph.h  Graph.h  HelperFunctions.cpp  HelperFunctions.h  IteratedMethods.h  LICENSE  MyQueue.h  MyRandom.cpp  MyRandom.h  QueryGenerator.h  QueryLoader.h  README.md  SpeedPPR.cpp  SpeedPPR.h  main.cpp
DataSetRaw/: GetDataSets.sh
